tests/neg/i3745c.scala
import scala.collection.{ Seq => A, Seq => B } // error: Seq is renamed twice
